--- a/Java/TestProject/MessageBook/web/WEB-INF/web.xml
+++ b/Java/TestProject/MessageBook/web/WEB-INF/web.xml
@@ -8,6 +8,24 @@
         <servlet-class>cn.nanami52.message.servlet.HomeServlet</servlet-class>
     </servlet>
 
+    <filter>
+        <filter-name>UserFilter</filter-name>
+        <filter-class>cn.nanami52.message.filter.UserFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>UserFilter</filter-name>
+        <url-pattern>*.do</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>CharsetFilter</filter-name>
+        <filter-class>cn.nanami52.message.filter.CharsetFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>CharsetFilter</filter-name>
+        <url-pattern>*</url-pattern>
+    </filter-mapping>
+
     <welcome-file-list>
         <welcome-file>/index.jsp</welcome-file>
     </welcome-file-list>
