--- a/Java/TestProject/testMybatis/src/main/resources/properties/db.properties
+++ b/Java/TestProject/testMybatis/src/main/resources/properties/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/user?characterEncoding=UTF-8&amp;characterSetResults=UTF-8&amp;zeroDateTimeBehavior=convertToNull
+url=jdbc:mysql://localhost:3306/mydb?characterEncoding=UTF-8&amp;characterSetResults=UTF-8&amp;zeroDateTimeBehavior=convertToNull
 username=root
 password=root
