--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "docsify s ./ -p 8000"
+    "start": "docsify s ./ -p 8000",
+    "doc": "java -jar ./docsify-sidebar-generator.jar"
   },
   "dependencies": {
     "docsify-cli": "^4.4.3"
